--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section class="container">
 	<div class="top">
 		<div class="animation"><i class="fab fa-android"></i></div>
-		<div class="screen"><span class="screenNums">0</span></div>
+		<div class="screen"><span class="screenNums">0</span><span class="mathFunction">x</span></div>
 	</div>
 	<div class="keyboard">
 		<div id="clearScreen" class="button">CE</div>
